--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: #333;
+    background: #666363;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
 .music-player{
-    background: #ffe0e5;
+    background: #ece6e7;
     width: 400px;
     padding: 25px 35px;
     text-align: center;
@@ -28,17 +28,17 @@ nav .circle{
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 50px;
     background: #fff;
     color: skyblue;
-    box-shadow: 0 5px 10px rgba(255,26,26,0.22);
+    box-shadow: 0 5px 10px rgba(103, 97, 97, 0.22);
 }
 .song-img{
     width: 300px;
     height: 300px;
     border-radius: 58%;
     border: 8px solid #fff;
-    box-shadow: 0 10px 60px rgba(255,26,26,0.22);
+    box-shadow: 0 10px 60px rgba(153, 147, 147, 0.22);
 
 }
 .music-player h1{
@@ -67,6 +67,30 @@ nav .circle{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border: 0 5px 5px rgba(255,26,26,0.22);
+    border: 8px solid #fff;
+    border: 0 5px 5px rgba(61, 51, 51, 0.22);
+}
+.controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.controls div{
+    width: 60px;
+    height: 60px;
+    margin: 20px;
+    background: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: black;
+    box-shadow: 0 10px 20px rgba(39, 32, 32, 0.22);
+    cursor: pointer;
+}
+.controls div:nth-child(2){
+    transform: scale(1.5);
+    background: rgb(173, 181, 233);
+    color: #fff;
 }
 
